# coralmicro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  hello_world_demo_cm7.elf  program_flexspinand_image.bd  setup.sh  setup_linux.sh  setup_mac.sh
apps/: CMakeLists.txt
apps/Analog/: CMakeLists.txt  analog.cc
apps/AudioStreaming/: CMakeLists.txt  audio_client.py  audio_file.py  audio_play.py  audio_server.cc  network.cc  network.h
apps/BFT/: CMakeLists.txt  bft.cc  bft_m4.cc
apps/BLETest/: CMakeLists.txt  ble_hello_sensor.h  ble_test.cc  wiced_bt_cfg.c
apps/BootROM/: CMakeLists.txt  boot_rom.cc
apps/CameraTest/: CMakeLists.txt  camera_test.cc
apps/CdcAcm/: CMakeLists.txt  cdc_acm.cc
apps/ClassifyImage/: CMakeLists.txt  cat.rgb  classify_image.cc
apps/DMATest/: CMakeLists.txt  dma_test.cc
apps/DetectImage/: CMakeLists.txt  cat.rgb  cat_300x300.rgb  detect_image.cc
apps/ELFLoader/: CMakeLists.txt  elf_loader.cc  elf_loader.h  usb_data.cc
apps/EdgefastBeacon/: CMakeLists.txt  edgefast_beacon.cc
apps/EdgefastScan/: CMakeLists.txt  edgefast_scan.cc
apps/EdgetpuDfu/: CMakeLists.txt  clock_config.h  dfu.cc  dfu.h  edgetpu_dfu.cc  peripherals.c  peripherals.h  pin_mux.c
apps/EdgetpuDfuFreeRTOS/: CMakeLists.txt  edgetpu_dfu.cc
apps/FlexSPI_NAND/: CMakeLists.txt  flexspi_nand.cc  flexspi_nand_lut.c  flexspi_nand_lut.h
apps/HelloSocket/: CMakeLists.txt  hello_socket.cc
apps/HelloTensorflow/: CMakeLists.txt  hello_tensorflow.cc
apps/HelloTensorflowFreeRTOS/: CMakeLists.txt  hello_tensorflow_freertos.cc  hello_world_model.cc
apps/HelloWorld/: CMakeLists.txt  board.c  clock_config.c  clock_config.h  evkmimxrt1170_flexspi_nor_config.c  hello_world.cc  pin_mux.h
apps/HelloWorldEthernet/: CMakeLists.txt  hello_world_ethernet.cc
apps/HelloWorldFreeRTOS/: CMakeLists.txt  board.c  board.h  hello_world_freertos.cc
apps/HelloWorldMultiCore/: CMakeLists.txt  hello_world_cm4.cc  hello_world_cm7.cc
apps/HelloWorldMultiCoreFreeRTOS/: CMakeLists.txt  hello_world_cm4.cc  hello_world_cm7.cc  message_buffer.h
apps/HelloWorldProto/: CMakeLists.txt
apps/ImageServer/: CMakeLists.txt  image_server.cc  image_server_test.py
apps/MFGTest/: CMakeLists.txt  coral_micro_mfg_test.py  coral_micro_mfg_test_iperf.py  coral_micro_mfg_test_mic.py  coral_micro_mfg_test_poe.py  coral_micro_mfg_test_wifi.py  mfg_test.cc  mfg_test_iperf.cc  mfg_test_iperf.h  mfg_test_poe.cc  mfg_test_wifi.cc  valiant_mfg_test.py  valiant_mfg_test_iperf.py  valiant_mfg_test_mic.py  valiant_mfg_test_poe.py  valiant_mfg_test_wifi.py
apps/MicroSpeech/: CMakeLists.txt  main_functions.cc  micro_speech.cc  model.cc
apps/OOBE/: CMakeLists.txt  image_provider.cc  jpeg.cc  jpeg.h  main_functions.cc  oobe.py  oobe_cm4.cc  oobe_cm7.cc  oobe_json.cc  oobe_json.h  oobe_simple_cm7.cc  requirements.txt
apps/PWM/: CMakeLists.txt  pwm.cc
apps/PersonDetection/: CMakeLists.txt  image_provider.cc  main_functions.cc  person_detection.cc  test_helpers.cc
apps/Posenet/: CMakeLists.txt  posenet.cc
apps/RPCServer/: CMakeLists.txt  rpc_client.py  rpc_server.cc
apps/RackTest/: CMakeLists.txt  rack_test.cc  rack_test_ipc.h  rack_test_m4.cc  rpc_helper.py  test_client.py
apps/SDRAMTest/: CMakeLists.txt  sdram_test.cc
apps/TestConv1/: CMakeLists.txt  testconv1.cc
apps/WebFileBrowser/: CMakeLists.txt  web_file_browser.cc
apps/WifiTest/: CMakeLists.txt  wifi_test.cc
apps/WlTool/: CMakeLists.txt  wl_tool.cc
apps/YAMNet/: CMakeLists.txt  yamnet.cc
apps/a71ch/: CMakeLists.txt  README.md  a71ch.cc  pubkey.sh
apps/elf_loader/: CMakeLists.txt  elf_loader.cc  usb_data.cc
apps/mbedTLS/: CMakeLists.txt  mbedtls.cc
apps/mfg_test/: CMakeLists.txt  coral_micro_mfg_test.py  coral_micro_mfg_test_iperf.py  coral_micro_mfg_test_mic.py  coral_micro_mfg_test_poe.py  coral_micro_mfg_test_wifi.py  mfg_test.cc  mfg_test_iperf.h  mfg_test_poe.cc  mfg_test_wifi.cc
apps/multicore_model_cascade/: CMakeLists.txt  README.md  multicore_model_cascade.py  multicore_model_cascade_cm4.cc  multicore_model_cascade_cm7.cc
apps/rack_test/: CMakeLists.txt  rack_test.cc  rack_test_ipc.h  rack_test_m4.cc  rpc_helper.py  test_client.py
apps/usb_drive/: CMakeLists.txt  README.md  usb_drive.cc
examples/: CMakeLists.txt  README.md
examples/Analog/: analog.cc
examples/AudioStreaming/: CMakeLists.txt
examples/BFT/: CMakeLists.txt  bft.cc  micro_test.h
examples/BLETest/: ble_hello_sensor.c  ble_test.cc
examples/BlinkLEDM4FromM7/: CMakeLists.txt  blink_led_m4.cc  main_app_m7.cc
examples/BlinkLEDM7/: CMakeLists.txt  blink_led_m7.cc
examples/BootROM/: boot_rom.cc
examples/CameraDetection/: CMakeLists.txt  camera_detection.cc  example_client.py
examples/CameraTest/: CMakeLists.txt  camera_test.cc
examples/CdcAcm/: cdc_acm.cc
examples/ClassifyImage/: classify_image.cc
examples/DMATest/: CMakeLists.txt  dma_test.cc
examples/EdgefastBeacon/: CMakeLists.txt
examples/FlexSPI_NAND/: flexspi_nand.cc  flexspi_nand_lut.c
examples/HelloSocket/: CMakeLists.txt
examples/HelloTensorflowFreeRTOS/: CMakeLists.txt  hello_tensorflow_freertos.cc  hello_world_model.cc
examples/HelloWorldFreeRTOS/: hello_world_freertos.cc
examples/HelloWorldMultiCoreFreeRTOS/: CMakeLists.txt  hello_world_cm7.cc
examples/HelloWorldProto/: hello_world_proto.cc
examples/ImageServer/: CMakeLists.txt
examples/MessagePassing/: CMakeLists.txt  example_message.h  message_passing.cc  message_passing_m4.cc
examples/MicroSpeech/: main_functions.cc  micro_speech.cc  model.cc  model.h
examples/PWM/: pwm.cc
examples/PersonDetection/: image_provider.cc  test_helpers.cc  test_helpers.h
examples/Posenet/: CMakeLists.txt  posenet.cc
examples/RPCServer/: CMakeLists.txt  rpc_client.py
examples/SDRAMTest/: CMakeLists.txt
examples/TestConv1/: CMakeLists.txt  testconv1.cc
examples/WifiTest/: CMakeLists.txt  wifi_test.cc
examples/WlTool/: wl_tool.cc
examples/YAMNet/: CMakeLists.txt  yamnet.cc
examples/a71ch/: CMakeLists.txt
examples/analog/: CMakeLists.txt  (+1 more)
libs/: CMakeLists.txt
(+853 files in other folders)
