cmake_minimum_required(VERSION 3.13)
add_subdirectory(BootROM)
add_subdirectory(CdcAcm)
add_subdirectory(EdgetpuDfu)
add_subdirectory(EdgetpuDfuFreeRTOS)
add_subdirectory(HelloTensorflow)
add_subdirectory(HelloTensorflowFreeRTOS)
add_subdirectory(HelloWorld)
add_subdirectory(HelloWorldFreeRTOS)
add_subdirectory(HelloWorldMultiCore)
add_subdirectory(HelloWorldMultiCoreFreeRTOS)
add_subdirectory(PersonDetection)
add_subdirectory(SDRAMTest)
