cmake_minimum_required(VERSION 3.13)
add_subdirectory(BFT)
add_subdirectory(BootROM)
add_subdirectory(CameraTest)
add_subdirectory(CdcAcm)
add_subdirectory(DMATest)
add_subdirectory(FlexSPI_NAND)
add_subdirectory(HelloSocket)
add_subdirectory(HelloTensorflow)
add_subdirectory(HelloTensorflowFreeRTOS)
add_subdirectory(HelloWorld)
add_subdirectory(HelloWorldFreeRTOS)
add_subdirectory(HelloWorldMultiCore)
add_subdirectory(HelloWorldMultiCoreFreeRTOS)
add_subdirectory(MicroSpeech)
# add_subdirectory(PersonDetection)
# add_subdirectory(Posenet)
add_subdirectory(SDRAMTest)
add_subdirectory(TestConv1)
