add_subdirectory(Analog)
add_subdirectory(AudioStreaming)
add_subdirectory(BFT)
add_subdirectory(BLETest)
add_subdirectory(BootROM)
add_subdirectory(CameraTest)
add_subdirectory(CdcAcm)
add_subdirectory(ClassifyImage)
add_subdirectory(DMATest)
add_subdirectory(DetectImage)
add_subdirectory(ELFLoader)
add_subdirectory(EdgefastBeacon)
add_subdirectory(FlexSPI_NAND)
add_subdirectory(HelloSocket)
add_subdirectory(HelloTensorflowFreeRTOS)
add_subdirectory(HelloWorld)
add_subdirectory(HelloWorldEthernet)
add_subdirectory(HelloWorldFreeRTOS)
add_subdirectory(HelloWorldMultiCoreFreeRTOS)
add_subdirectory(HelloWorldProto)
add_subdirectory(MFGTest)
add_subdirectory(MicroSpeech)
add_subdirectory(OOBE)
add_subdirectory(PWM)
add_subdirectory(PersonDetection)
add_subdirectory(Posenet)
add_subdirectory(RPCServer)
add_subdirectory(RackTest)
add_subdirectory(SDRAMTest)
add_subdirectory(TestConv1)
add_subdirectory(WifiTest)
add_subdirectory(WlTool)
add_subdirectory(YAMNet)
add_subdirectory(a71ch)
add_subdirectory(mbedTLS)
add_subdirectory(WebFileBrowser)
add_subdirectory(ImageServer)
