# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(security)
add_subdirectory(analog)
add_subdirectory(audio_streaming)
add_subdirectory(blink_led_m4)
add_subdirectory(button_led)
add_subdirectory(CameraTest)
add_subdirectory(classify_image)
add_subdirectory(detect_camera)
add_subdirectory(detect_image)
add_subdirectory(ble_beacon)
add_subdirectory(ble_beacon_scan)
add_subdirectory(socket_hello_world)
add_subdirectory(hello_world)
add_subdirectory(curl)
add_subdirectory(freertos_hello_world)
add_subdirectory(freertos_multi_core)
add_subdirectory(protobuf_hello_world)
add_subdirectory(image_server)
add_subdirectory(mbedTLS)
add_subdirectory(message_passing)
add_subdirectory(tflm_hello_world)
add_subdirectory(tflm_micro_speech)
add_subdirectory(tflm_person_detection)
add_subdirectory(posenet)
add_subdirectory(pwm)
add_subdirectory(rpc_server)
add_subdirectory(TestConv1)
add_subdirectory(web_file_browser)
add_subdirectory(yamnet)
add_subdirectory(http_server)
