# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(analog)
add_subdirectory(audio_streaming)
add_subdirectory(ble_beacon)
add_subdirectory(ble_beacon_scan)
add_subdirectory(blink_led)
add_subdirectory(button_led)
add_subdirectory(camera_motion_detection)
add_subdirectory(camera_streaming_http)
add_subdirectory(camera_streaming_rpc)
add_subdirectory(camera_triggered)
add_subdirectory(classify_audio)
add_subdirectory(classify_images)
add_subdirectory(classify_images_file)
add_subdirectory(classify_speech)
add_subdirectory(console_read_write)
add_subdirectory(curl)
add_subdirectory(detect_faces)
add_subdirectory(detect_objects)
add_subdirectory(detect_objects_file)
add_subdirectory(detect_poses)
add_subdirectory(file_read_write)
add_subdirectory(freertos_task)
add_subdirectory(gpio)
add_subdirectory(hello_world)
add_subdirectory(http_server)
add_subdirectory(i2c)
add_subdirectory(multi_core_blink_led)
add_subdirectory(multi_core_hello)
add_subdirectory(multi_core_ipc)
add_subdirectory(pwm)
add_subdirectory(rpc_server)
add_subdirectory(security)
add_subdirectory(segment_objects)
add_subdirectory(segment_poses)
add_subdirectory(socket_hello_world)
add_subdirectory(spi)
add_subdirectory(tflm_hello_world)
add_subdirectory(tflm_micro_speech)
add_subdirectory(tflm_person_detection_m4)
add_subdirectory(tflm_person_detection_m7)
add_subdirectory(web_file_browser)
add_subdirectory(wifi_client)
add_subdirectory(wifi_server)
