cmake_minimum_required(VERSION 3.13)
add_subdirectory(CMSIS)
add_subdirectory(CdcAcm)
add_subdirectory(CdcEem)
add_subdirectory(CoreMark)
add_subdirectory(FreeRTOS)
add_subdirectory(RPCServer)
add_subdirectory(base)
add_subdirectory(curl)
add_subdirectory(flatbuffers)
add_subdirectory(gemmlowp)
add_subdirectory(kissfft)
add_subdirectory(mjson)
add_subdirectory(nxp)
add_subdirectory(posenet)
add_subdirectory(ruy)
add_subdirectory(tasks)
add_subdirectory(tensorflow)
add_subdirectory(testconv1)
add_subdirectory(testlib)
add_subdirectory(tpu)
add_subdirectory(usb_host_edgetpu)
add_subdirectory(arduino)
