add_subdirectory(audio)
add_subdirectory(CMSIS)
add_subdirectory(cdc_acm)
add_subdirectory(cdc_eem)
add_subdirectory(coremark)
add_subdirectory(FreeRTOS)
add_subdirectory(rpc)
add_subdirectory(yamnet)
add_subdirectory(a71ch)
add_subdirectory(base)
add_subdirectory(curl)
add_subdirectory(flatbuffers)
add_subdirectory(gemmlowp)
add_subdirectory(kissfft)
add_subdirectory(libjpeg)
add_subdirectory(littlefs)
add_subdirectory(mjson)
add_subdirectory(nxp)
add_subdirectory(posenet)
add_subdirectory(ruy)
add_subdirectory(tasks)
add_subdirectory(tensorflow)
add_subdirectory(testconv1)
add_subdirectory(testlib)
add_subdirectory(tpu)
add_subdirectory(usb_host_edgetpu)
add_subdirectory(arduino)
