# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(audio)
add_subdirectory(CMSIS)
add_subdirectory(camera)
add_subdirectory(cdc_acm)
add_subdirectory(cdc_eem)
add_subdirectory(coremark)
add_subdirectory(FreeRTOS)
add_subdirectory(rpc)
add_subdirectory(msc_ums)
add_subdirectory(a71ch)
add_subdirectory(base)
add_subdirectory(curl)
add_subdirectory(flatbuffers)
add_subdirectory(gemmlowp)
add_subdirectory(kissfft)
add_subdirectory(libjpeg)
add_subdirectory(littlefs)
add_subdirectory(mjson)
add_subdirectory(nxp)
add_subdirectory(pmic)
add_subdirectory(ruy)
add_subdirectory(tensorflow)
add_subdirectory(testlib)
add_subdirectory(tpu)
add_subdirectory(usb)
add_subdirectory(arduino)
